[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/Game.gd" id="1"]

[node name="Game" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="BGPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = &"Panel"

[node name="VBoxContainer" type="VBoxContainer" parent="BGPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1
offset_left = 20
offset_top = 20
offset_right = -20
offset_bottom = -20

[node name="Title" type="Label" parent="BGPanel/VBoxContainer"]
text = "Story Mode"
theme_type_variation = &"HeaderLarge"
horizontal_alignment = 1

[node name="XPProgress" type="ProgressBar" parent="BGPanel/VBoxContainer"]
min_value = 0
max_value = 100
value = 0
size_flags_horizontal = 3
size_flags_vertical = 1
theme_type_variation = &"ProgressBar"

[node name="StatsLabel" type="Label" parent="BGPanel/VBoxContainer"]
text = "Stats: ..."
horizontal_alignment = 0
autowrap_mode = 3
theme_type_variation = &"BodyText"

[node name="TraitsLabel" type="Label" parent="BGPanel/VBoxContainer"]
text = "Traits: ..."
horizontal_alignment = 0
autowrap_mode = 3
theme_type_variation = &"BodyText"

[node name="StoryLog" type="RichTextLabel" parent="BGPanel/VBoxContainer"]
text = "[b]Adventure Log:[/b]\nYou enter the world..."
autowrap_mode = 3
scroll_active = true
size_flags_vertical = 3

[node name="ButtonRow" type="HBoxContainer" parent="BGPanel/VBoxContainer"]
alignment = 1
custom_constants/separation = 10

[node name="NextEventBtn" type="Button" parent="BGPanel/VBoxContainer/ButtonRow"]
text = "Next Event"

[node name="BackBtn" type="Button" parent="BGPanel/VBoxContainer/ButtonRow"]
text = "Back to Menu"
